--- a/app/src/main/res/layout/layout_list_order.xml
+++ b/app/src/main/res/layout/layout_list_order.xml
@@ -24,8 +24,8 @@
         android:id="@+id/order_avatar"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="@dimen/padding"
+        android:layout_marginTop="@dimen/padding"
         android:contentDescription="TODO"
         app:layout_constraintStart_toStartOf="@+id/order_ticket"
         app:layout_constraintTop_toTopOf="@+id/order_ticket"
@@ -36,10 +36,9 @@
         style="@style/headline1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="@dimen/small_padding"
         android:text="Abderrahman Errached Tlili"
-        app:layout_constraintEnd_toEndOf="@+id/order_ticket"
+        app:layout_constraintEnd_toStartOf="@+id/order_ic_status"
         app:layout_constraintStart_toEndOf="@+id/order_avatar"
         app:layout_constraintTop_toTopOf="@+id/order_avatar" />
 
@@ -48,8 +47,9 @@
         style="@style/headline3_grey"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/padding"
         android:text="ha_tlili@esi.dz"
-        app:layout_constraintEnd_toEndOf="@+id/order_name"
+        app:layout_constraintEnd_toEndOf="@+id/order_ticket"
         app:layout_constraintStart_toStartOf="@+id/order_name"
         app:layout_constraintTop_toBottomOf="@+id/order_name" />
 
@@ -58,11 +58,10 @@
         style="@style/headline3_grey"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="@dimen/small_padding"
         android:text="TOTAL"
         android:textAlignment="textStart"
-        app:layout_constraintEnd_toEndOf="@+id/order_ticket"
+        app:layout_constraintEnd_toEndOf="@+id/order_remainging_time"
         app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toTopOf="@+id/order_id" />
 
@@ -96,8 +95,8 @@
         style="@style/headline3_grey"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginTop="@dimen/padding"
+        android:layout_marginEnd="@dimen/small_padding"
         android:text="ID"
         android:textAlignment="textStart"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
@@ -109,8 +108,8 @@
         style="@style/headline3_grey"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="@dimen/small_padding"
+        android:layout_marginTop="@dimen/padding"
         android:text="Phone number"
         app:layout_constraintEnd_toEndOf="@+id/order_email"
         app:layout_constraintHorizontal_bias="0.0"
@@ -183,8 +182,8 @@
         style="@style/headline1_DZD"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="2dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginStart="@dimen/dzd_padding"
+        android:layout_marginBottom="@dimen/dzd_padding"
         android:text="DZD"
         android:textAlignment="textStart"
         android:textColor="@color/green_600"
@@ -208,8 +207,8 @@
         style="@style/headline3_grey"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="@dimen/small_padding"
+        android:layout_marginTop="@dimen/small_padding"
         android:text="Address"
         app:layout_constraintEnd_toEndOf="@+id/order_phone_number_title"
         app:layout_constraintStart_toEndOf="@+id/order_ic_address_circle"
@@ -220,8 +219,8 @@
         style="@style/headline3_grey"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="@dimen/small_padding"
+        android:layout_marginTop="@dimen/small_padding"
         android:text="Remaining time"
         app:layout_constraintEnd_toEndOf="@+id/order_address_title"
         app:layout_constraintStart_toEndOf="@+id/order_ic_remaining_time_circle"
@@ -307,5 +306,17 @@
         app:layout_constraintEnd_toEndOf="@+id/order_product_button"
         app:layout_constraintStart_toStartOf="@+id/order_product_button"
         app:layout_constraintTop_toTopOf="@+id/order_product_button" />
+
+    <ImageView
+        android:id="@+id/order_ic_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/small_padding"
+        android:layout_marginEnd="@dimen/small_padding"
+        android:tint="@color/red_500"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="@+id/order_ticket"
+        app:layout_constraintTop_toTopOf="@+id/order_ticket"
+        app:srcCompat="@drawable/ic_alert" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
