--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="small_padding">10dp</dimen>
     <dimen name="padding">20dp</dimen>
     <dimen name="start_padding">40dp</dimen>
+    <dimen name="dzd_padding">2dp</dimen>
     <dimen name="elevation">8dp</dimen>
 </resources>
