--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,62 +7,194 @@
     android:layout_height="match_parent"
     tools:context=".view.LoginActivity">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_field_email"
-        android:layout_width="0dp"
+    <Spinner
+        android:id="@+id/languages_spinner"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/padding"
-        android:layout_marginTop="@dimen/start_padding"
-        android:layout_marginEnd="@dimen/padding"
-        app:boxStrokeColor="@color/teal_200"
-        app:errorEnabled="true"
+        android:layout_marginTop="@dimen/small_padding"
+        android:entries="@array/languages"
+        android:spinnerMode="dialog"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/white"
-            android:drawableTint="@color/green_200"
-            android:foregroundTint="@color/teal_200"
-            android:hint="Email"
-            android:inputType="textEmailAddress" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_field_password"
+    <View
+        android:id="@+id/divider_top"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="1dp"
+        android:layout_marginTop="@dimen/small_padding"
+        android:background="@color/grey"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/languages_spinner" />
+
+    <EditText
+        android:id="@+id/input_email"
+        style="@style/headline1"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginStart="@dimen/padding"
+        android:layout_marginTop="@dimen/padding"
+        android:layout_marginEnd="@dimen/padding"
+        android:autofillHints=""
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/ic_email"
+        android:drawablePadding="@dimen/small_padding"
+        android:ems="10"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress"
+        android:padding="@dimen/small_padding"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+    <EditText
+        android:id="@+id/input_password"
+        style="@style/headline1"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="@dimen/padding"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/ic_lock"
+        android:drawablePadding="@dimen/small_padding"
+        android:ems="10"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:padding="@dimen/small_padding"
         app:boxStrokeColor="@color/teal_200"
         app:errorEnabled="true"
-        app:layout_constraintEnd_toEndOf="@+id/input_field_email"
-        app:layout_constraintStart_toStartOf="@+id/input_field_email"
-        app:layout_constraintTop_toBottomOf="@+id/input_field_email"
-        app:passwordToggleEnabled="true">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/white"
-            android:drawableTint="@color/green_200"
-            android:foregroundTint="@color/teal_200"
-            android:hint="Password"
-            android:inputType="textPassword" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintEnd_toEndOf="@+id/input_email"
+        app:layout_constraintStart_toStartOf="@+id/input_email"
+        app:layout_constraintTop_toBottomOf="@+id/input_email"
+        app:passwordToggleEnabled="true" />
 
     <Button
         android:id="@+id/login_button"
+        style="@style/button"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginTop="@dimen/padding"
         android:background="@drawable/rounded_card"
-        android:text="Login"
-        app:layout_constraintEnd_toEndOf="@+id/input_field_password"
-        app:layout_constraintStart_toStartOf="@+id/input_field_password"
-        app:layout_constraintTop_toBottomOf="@+id/input_field_password" />
+        android:shadowColor="@color/teal_200"
+        android:text="@string/login"
+        app:layout_constraintEnd_toEndOf="@+id/input_password"
+        app:layout_constraintStart_toStartOf="@+id/input_password"
+        app:layout_constraintTop_toBottomOf="@+id/input_password" />
+
+    <View
+        android:id="@+id/divider_left"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginStart="@dimen/padding"
+        android:layout_marginEnd="@dimen/padding"
+        android:background="@color/grey"
+        app:layout_constraintBottom_toBottomOf="@+id/login_or"
+        app:layout_constraintEnd_toStartOf="@+id/login_or"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/login_or" />
+
+    <TextView
+        android:id="@+id/login_or"
+        style="@style/headline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/padding"
+        android:text="@string/or"
+        android:textColor="@color/grey"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_button" />
+
+    <View
+        android:id="@+id/dvider_right"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginStart="@dimen/padding"
+        android:layout_marginEnd="@dimen/padding"
+        android:background="@color/grey"
+        app:layout_constraintBottom_toBottomOf="@+id/login_or"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/login_or"
+        app:layout_constraintTop_toTopOf="@+id/login_or"
+        app:layout_constraintVertical_bias="0.526" />
+
+    <View
+        android:id="@+id/google_buttnon"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="@dimen/padding"
+        app:layout_constraintEnd_toEndOf="@+id/dvider_right"
+        app:layout_constraintStart_toStartOf="@+id/divider_left"
+        app:layout_constraintTop_toBottomOf="@+id/login_or" />
+
+    <ImageView
+        android:id="@+id/google_g_logo"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_marginEnd="@dimen/padding"
+        app:layout_constraintBottom_toBottomOf="@+id/google_buttnon"
+        app:layout_constraintEnd_toStartOf="@+id/sign_in_with_google"
+        app:layout_constraintTop_toTopOf="@+id/google_buttnon"
+        app:srcCompat="@drawable/ic_google_icon" />
+
+    <TextView
+        android:id="@+id/sign_in_with_google"
+        style="@style/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_medium"
+        android:text="@string/sign_in_with_google"
+        android:textColor="@color/grey"
+        app:layout_constraintBottom_toBottomOf="@+id/google_buttnon"
+        app:layout_constraintEnd_toEndOf="@+id/google_buttnon"
+        app:layout_constraintHorizontal_bias="0.56"
+        app:layout_constraintStart_toStartOf="@+id/google_buttnon"
+        app:layout_constraintTop_toTopOf="@+id/google_buttnon" />
+
+    <TextView
+        android:id="@+id/textView7"
+        style="@style/headline8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/start_padding"
+        android:text="@string/log_in"
+        app:layout_constraintEnd_toEndOf="@+id/input_email"
+        app:layout_constraintStart_toStartOf="@+id/input_email"
+        app:layout_constraintTop_toBottomOf="@+id/divider_top" />
+
+    <View
+        android:id="@+id/divider_bottom"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginBottom="@dimen/small_padding"
+        android:background="@color/grey"
+        app:layout_constraintBottom_toTopOf="@+id/forgot_your_login_credentials"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/forgot_your_login_credentials"
+        style="@style/headline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Forgot your loggin credentials? "
+        android:textColor="@color/grey"
+        app:layout_constraintBottom_toTopOf="@+id/forgot_yout_login_credentials"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/forgot_yout_login_credentials"
+        style="@style/headline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/small_padding"
+        android:text="Get help logging in."
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/forgot_your_login_credentials"
+        app:layout_constraintStart_toStartOf="@+id/forgot_your_login_credentials" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
