--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="green_100">#FFECFAF8</color>
     <color name="green_200">#FFE1F2EF</color>
     <color name="green_600">#FF33A594</color>
+    <color name="green_800">#FF208A7A</color>
     <color name="blue_100">#FFBCDCFF</color>
     <color name="blue_500">#FF318CFF</color>
     <color name="blue_800">#FF3B58D7</color>
